...
	enum ExposureNotificationSetting {
		static let descriptionTitleInactive = "AppStrings.ExposureNotificationSetting.descriptionTitleInactive"
		static let descriptionTitle = "AppStrings.ExposureNotificationSetting.descriptionTitle"
		static let descriptionText1 = "AppStrings.ExposureNotificationSetting.descriptionText1"
		static let descriptionText2 = "AppStrings.ExposureNotificationSetting.descriptionText2"
...
			static let imageOn = "AppStrings.NotificationSettings.imageDescriptionOn"
			static let imageOff = "AppStrings.NotificationSettings.imageDescriptionOff"
			static let description = "AppStrings.NotificationSettings.DeltaOnboarding.description"
		}
		static let notifications = "AppStrings.NotificationSettings.notifications"
...
			
			enum Details {
				static let image = "AppStrings.Home.AppClosureNoticeCell.Details.image"
				static let titleLabel = "AppStrings.Home.AppClosureNoticeCell.Details.titleLabel"
				static let subtitleLabel = "AppStrings.Home.AppClosureNoticeCell.Details.subtitleLabel"
...
		enum RiskTableViewCell {
			enum LowRisk {
				static let title = "AccessibilityIdentifiers.Home.RiskTableViewCell.LowRiskTitle"
				static let noExposuresLabel = "AccessibilityIdentifiers.Home.RiskTableViewCell.NoExposuresLabel"
				static let installedLabel = "AccessibilityIdentifiers.Home.RiskTableViewCell.InstalledLabel"
...
				static let pcrCell = "AccessibilityIdentifiers.Home.pcrCell"
				static let title = "AccessibilityIdentifiers.Home.pcrCell.Positive.Title"
				static let subtitle = "AccessibilityIdentifiers.Home.pcrCell.Positive.Subtitle"
				static let firstBulletPoint = "AccessibilityIdentifiers.Home.pcrCell.Positive.Item0"
				static let secondBulletPoint = "AccessibilityIdentifiers.Home.pcrCell.Positive.Item1"
...
		static let imprintSection4Title = "AppStrings.AppInformation.imprintSection4Title"
		static let imprintSection4Text = "AppStrings.AppInformation.imprintSection4Text"
		static let privacyImageDescription = "AppStrings.AppInformation.privacyImageDescription"
		static let privacyTitle = "AppStrings.AppInformation.privacyTitle"
		static let termsImageDescription = "AppStrings.AppInformation.termsImageDescription"
...
		}

		static let fakeHC1 = "QRScanner_FAKE_HC1"
		static let fakeHC2 = "QRScanner_FAKE_HC2"
		static let fakePCR = "QRScanner_FAKE_PCR"
		static let fakePCR2 = "QRScanner_FAKE_PCR2"
		static let fakeEvent = "QRScanner_FAKE_EVENT"
		static let fakeTicketValidation = "QRScanner_FAKE_TICKET_VALIDATION"
		static let other = "QRScanner_OTHER"
...

	enum SRSConsentScreen {
		static let primaryButton = "AppStrings.SRSConsentScreen.primaryButton"
		static let secondaryButton = "AppStrings.SRSConsentScreen.secondaryButton"
		static let accImageDescription = "AppStrings.SRSConsentScreen.accImageDescription"
...

			enum Pcr {
				static let headline = "AppStrings.ExposureSubmission.OverwriteNotice.Pcr.headline"
				static let text = "AppStrings.ExposureSubmission.OverwriteNotice.Pcr.text"
			}
...
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
		static let defaultButton = "General.defaultButton"
...
	enum TabBar {
		static let home = "TabBar.home"
		static let certificates = "TabBar.certificates"
		static let scanner = "TabBar.scanner"
		static let checkin = "TabBar.checkin"
		static let diary = "TabBar.diary"
...
		static let navigation = "AppStrings.ErrorReport.navigation"
		static let topBody = "AppStrings.ErrorReport.topBody"
		static let faq = "AppStrings.ErrorReport.faq"
		static let privacyInformation = "AppStrings.ErrorReport.privacyInformation"
		static let privacyNavigation = "AppStrings.ErrorReport.privacyNavigation"
...
			static let saveToDiary = "AppStrings.Checkins.Details.saveToDiary"
			static let automaticCheckout = "AppStrings.Checkins.Details.automaticCheckout"
			static let checkinFor = "AppStrings.Checkins.Details.checkinFor"
		}
		
...

		enum Overview {
			static let changeAdmissionScenarioCell =
				"AppStrings.HealthCertificate.changeAdmissionScenarioCell"
			static let healthCertifiedPersonCell = "AppStrings.HealthCertificate.healthCertifiedPersonCell"
			static let testCertificateRequestCell = "AppStrings.HealthCertificate.testCertificateRequestCell"
			static let emptyState = "AppStrings.HealthCertificate.emptyState"
...
			}

			static let disclaimer = "AppStrings.HealthCertificate.Info.disclaimer"
			static let acknowledgementTitle = "HealthCertificate.Info.acknowledgement"
		}
...

		enum Person {
			static let certificateCell = "HealthCertificate.Person.cell"
			static let validationButton = "HealthCertificate.Person.validationButton"
			
...
		
		enum AdmissionState {
			static let roundedView = "HealthCertificate.AdmissionState.roundedView"
			static let title = "HealthCertificate.AdmissionState.title"
			static let subtitle = "HealthCertificate.AdmissionState.subtitle"
...
		enum PrintPdf {
			static let imageDescription = "AppStrings.HealthCertificate.PrintPDF.imageDescription"
			static let infoPrimaryButton = "AppStrings.HealthCertificate.PrintPDF.infoPrimaryButton"
			static let printButton = "AppStrings.HealthCertificate.PrintPDF.printButton"
			static let shareButton = "AppStrings.HealthCertificate.PrintPDF.shareButton"
			static let faqAction = "AppStrings.HealthCertificate.PrintPDF.faqAction"
			static let okAction = "AppStrings.HealthCertificate.PrintPDF.okAction"
		}

		static let header = "HealthCertificate.header"
		static let qrCodeCell = "HealthCertificate.qrCodeCell"
		static func qrCodeView(of identifier: String) -> String { "HealthCertificate.QRCode.\(identifier)" }
		
...
		enum Details {
			static let image = "BoosterNotification.Details.image"
			static let boosterNotificationCell = "BoosterNotification.Details.boosterNotificationCell"
		}
	}
...
